Set up Mid-Level integration test